media: Reject all pending promises in CdmAdapter destructor

Otherwise, we'll hit a DCHECK in CdmPromiseAdapter destructor.

TBR=jrummell@chromium.org
BUG=777078

Change-Id: I02e3f262eb6516d7e4dd272ee009a1778379c538
Reviewed-on: https://chromium-review.googlesource.com/731983
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510667}
Former-commit-id: 2f72915a270c5bd8a67684759932f5ef39d8d7a4